--- a/index.html
+++ b/index.html
@@ -52,4 +52,12 @@
             <p><span class=text>POST BODY</span></p>
             <p><span class=text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
         </div>
+                <div class=storyText>
+            <h2 class=chapter>POST TITLE 2</h2>
+            <p><span class=text>POST BODY</span></p>
+            <p><span class=text>POST BODY</span></p>
+            <p><span class=text>POST BODY</span></p>
+            <p><span class=text>POST BODY</span></p>
+            <p><span class=text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
+        </div>
     </div>
