--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     </style>
     <div class=main>
         <div class=storyText>
+            <h2 class="text chapter">James Foltz</h2>
+            <h2 class="text chapter">3rd times the charm</h2>
+            <h2 class="text chapter">Google 20% Time Project</h2>
+        </div>
+        <div class=storyText>
             <h2 class=chapter>POST TITLE</h2>
             <p><span class=text>POST BODY</span></p>
             <p><span class=text>POST BODY</span></p>
@@ -52,7 +57,7 @@
             <p><span class=text>POST BODY</span></p>
             <p><span class=text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
         </div>
-                <div class=storyText>
+        <div class=storyText>
             <h2 class=chapter>POST TITLE 2</h2>
             <p><span class=text>POST BODY</span></p>
             <p><span class=text>POST BODY</span></p>
