changed links to a ul

--- a/research/index.html
+++ b/research/index.html
@@ -1,1 +1,3 @@
-<a href="https://www.youtube.com/watch?v=5Ka3tbbT-9E" target="_blank" rel="noopener noreferrer">How To Code a Falling Sand Simulation (like Noita) with Cellular Automata (MARF)</a>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=5Ka3tbbT-9E" target="_blank" rel="noopener noreferrer">How To Code a Falling Sand Simulation (like Noita) with Cellular Automata (MARF)</a></li>
+</ul>
