--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-
-<!doctypehtml>
-    <html lang=en>
-    <meta charset=UTF-8>
-    <meta content="width=device-width,initial-scale=1" name=viewport>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
     <title>20% project blog</title>
     <style>
         body {
@@ -42,27 +42,62 @@
             border-color: red;
             color: hsl(38, 27.7, 80);
         }
+
+        /* New styles for the navigation bar */
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+            position: sticky;
+            top: 0;
+            width: 100%;
+        }
+
+        .navbar a {
+            float: left;
+            display: block;
+            color: rgb(187, 168, 135);
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
     </style>
-    <div class=main>
-        <div class=storyText>
+</head>
+<body>
+    <!-- New navigation bar -->
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#posts">Posts</a>
+        <a href="#contact">Contact</a>
+    </div>
+
+    <div class="main">
+        <div class="storyText">
             <h2 class="text chapter">James Foltz</h2>
             <h2 class="text chapter">3rd times the charm</h2>
             <h2 class="text chapter">Google 20% Time Project</h2>
         </div>
-        <div class=storyText>
-            <h2 class=chapter>POST TITLE</h2>
-            <p><span class=text>POST BODY</span></p>
-            <p><span class=text>POST BODY</span></p>
-            <p><span class=text>POST BODY</span></p>
-            <p><span class=text>POST BODY</span></p>
-            <p><span class=text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
+        <div class="storyText">
+            <h2 class="chapter">POST TITLE</h2>
+            <p><span class="text">POST BODY</span></p>
+            <p><span class="text">POST BODY</span></p>
+            <p><span class="text">POST BODY</span></p>
+            <p><span class="text">POST BODY</span></p>
+            <p><span class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
         </div>
-        <div class=storyText>
-            <h2 class=chapter>POST TITLE 2</h2>
-            <p><span class=text>POST BODY</span></p>
-            <p><span class=text>POST BODY</span></p>
-            <p><span class=text>POST BODY</span></p>
-            <p><span class=text>POST BODY</span></p>
-            <p><span class=text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
+        <div class="storyText">
+            <h2 class="chapter">POST TITLE 2</h2>
+            <p><span class="text">POST BODY</span></p>
+            <p><span class="text">POST BODY</span></p>
+            <p><span class="text">POST BODY</span></p>
+            <p><span class="text">POST BODY</span></p>
+            <p><span class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
         </div>
     </div>
+</body>
+</html>
