--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
@@ -67,6 +68,7 @@
         }
     </style>
 </head>
+
 <body>
     <!-- New navigation bar -->
     <div class="navbar">
@@ -83,21 +85,68 @@
             <h2 class="text chapter">Google 20% Time Project</h2>
         </div>
         <div class="storyText">
-            <h2 class="chapter">POST TITLE</h2>
-            <p><span class="text">POST BODY</span></p>
-            <p><span class="text">POST BODY</span></p>
-            <p><span class="text">POST BODY</span></p>
-            <p><span class="text">POST BODY</span></p>
-            <p><span class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
-        </div>
-        <div class="storyText">
-            <h2 class="chapter">POST TITLE 2</h2>
-            <p><span class="text">POST BODY</span></p>
-            <p><span class="text">POST BODY</span></p>
-            <p><span class="text">POST BODY</span></p>
-            <p><span class="text">POST BODY</span></p>
-            <p><span class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut saepe assumenda, a vero recusandae reprehenderit tempora itaque modi voluptas labore debitis, aperiam cumque odio dolorum provident atque ducimus, earum ipsum.</span></p>
+            <div class="stackedit__html">
+                <h1 id="devlog-sand-game-simulation---2025-feb-13">Devlog: Sand Game Simulation - 2025 Feb 13</h1>
+                <h2 id="project-overview">Project Overview</h2>
+                <p>We’ve successfully implemented a basic rule-based voxel sand simulation. This marks a significant
+                    milestone in our project, establishing both our core objectives and a solid foundation for future
+                    development.</p>
+                <h2 id="key-achievements">Key Achievements</h2>
+                <ol>
+                    <li>Created a simple but functional pixel sand simulation</li>
+                    <li>Established project goals and structure</li>
+                    <li>Implemented basic rule set for sand behavior as well as a few other matierials</li>
+                </ol>
+                <h2 id="technical-learnings">Technical Learnings</h2>
+                <ul>
+                    <li><strong>Conflict Resolution</strong>: Found the importance of managing conflicts between cells.
+                    </li>
+                    <li><strong>Rule-Based Systems</strong>: Gained insight on how the rulebased aspect of my program
+                        should function</li>
+                </ul>
+                <h2 id="challenges-encountered">Challenges Encountered</h2>
+                <ul>
+                    <li>Current implementation updates simulation cells one by one, causing imprecise logic, unexpected
+                        behaviors and artifacts.</li>
+                </ul>
+                <h2 id="next-steps">Next Steps</h2>
+                <ol>
+                    <li>
+                        <p><strong>User Interface Development</strong></p>
+                        <ul>
+                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
+                                    disabled=""> Design an intuitive UI for user interaction</li>
+                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
+                                    disabled=""> Implement basic controls (e.g., sand placement, clearing the
+                                simulation)</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p><strong>Simulation Enhancement</strong></p>
+                        <ul>
+                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
+                                    disabled=""> Refine and expand the rule set for more realistic sand behavior</li>
+                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
+                                    disabled=""> Implement simultaneous cell updates to improve simulation accuracy</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p><strong>Code Refactoring</strong></p>
+                        <ul>
+                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
+                                    disabled=""> Restructure the update mechanism for parallel processing of cells</li>
+                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
+                                    disabled=""> Optimize performance for larger-scale simulations</li>
+                        </ul>
+                    </li>
+                </ol>
+                <h2 id="reflections">Reflections</h2>
+                <p>This initial implementation has given me an idea of the scope of this project and potential places to
+                    improve, as well as problems i should expect to have in the future.</p>
+                <hr>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
