--- a/index.html
+++ b/index.html
@@ -2,151 +2,131 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width,initial-scale=1" name="viewport">
-    <title>20% project blog</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            background-color: #212121;
-            color: rgb(187, 168, 135);
-            font-size: large
-        }
+  <meta charset="UTF-8" />
+  <meta content="width=device-width,initial-scale=1" name="viewport" />
+  <title>20% project blog</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      background-color: #212121;
+      color: rgb(187, 168, 135);
+      font-size: large
+    }
 
-        .main {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            flex-direction: column;
-            align-items: center
-        }
+    .main {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center
+    }
 
-        .storyText {
-            width: min(90%, 80ch);
-            --offsetx: 8px;
-            --offsety: 8px;
-            --blur-rad: 5px;
-            --spread: -2px;
-            margin-bottom: 15px;
-            background-color: #333;
-            box-shadow: var(--offsetx) var(--offsety) var(--blur-rad) var(--spread) rgba(0, 0, 0, 0.39);
-            padding: 5%;
-            border-radius: 7px;
-        }
+    .storyText {
+      width: min(90%, 80ch);
+      --offsetx: 8px;
+      --offsety: 8px;
+      --blur-rad: 5px;
+      --spread: -2px;
+      margin-bottom: 15px;
+      background-color: #333;
+      box-shadow: var(--offsetx) var(--offsety) var(--blur-rad) var(--spread) rgba(0, 0, 0, 0.39);
+      padding: 5%;
+      border-radius: 7px;
+    }
 
-        .text:hover {
-            background-color: rgba(83, 83, 83, .25);
-            border-radius: 5px;
-            border-width: 10px;
-            border-color: red;
-            color: hsl(38, 27.7, 80);
-        }
+    .text:hover {
+      background-color: rgba(83, 83, 83, .25);
+      border-radius: 5px;
+      border-width: 10px;
+      border-color: red;
+      color: hsl(38, 27.7, 80);
+    }
 
-        /* New styles for the navigation bar */
-        .navbar {
-            background-color: #333;
-            overflow: hidden;
-            position: sticky;
-            top: 0;
-            width: 100%;
-        }
+    /* New styles for the navigation bar */
+    .navbar {
+      background-color: #333;
+      overflow: hidden;
+      position: sticky;
+      top: 0;
+      width: 100%;
+    }
 
-        .navbar a {
-            float: left;
-            display: block;
-            color: rgb(187, 168, 135);
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
+    .navbar a {
+      float: left;
+      display: block;
+      color: rgb(187, 168, 135);
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
 
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-    </style>
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+  </style>
 </head>
 
 <body>
-    <!-- New navigation bar -->
-    <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#posts">Posts</a>
-        <a href="#contact">Contact</a>
+  <div class="navbar"><a href="#home">Home</a><a href="#about">About</a><a href="#posts">Posts</a><a href="#contact">Contact</a></div>
+  <div class="main">
+    <div class="storyText">
+      <h2 class="text chapter">James Foltz</h2>
+      <h2 class="text chapter">3rd times the charm</h2>
+      <h2 class="text chapter">Google 20% Time Project</h2>
     </div>
-
-    <div class="main">
-        <div class="storyText">
-            <h2 class="text chapter">James Foltz</h2>
-            <h2 class="text chapter">3rd times the charm</h2>
-            <h2 class="text chapter">Google 20% Time Project</h2>
-        </div>
-        <div class="storyText">
-            <div class="stackedit__html">
-                <h1 id="devlog-sand-game-simulation---2025-feb-13">Devlog: Sand Game Simulation - 2025 Feb 13</h1>
-                <h2 id="project-overview">Project Overview</h2>
-                <p>We’ve successfully implemented a basic rule-based voxel sand simulation. This marks a significant
-                    milestone in our project, establishing both our core objectives and a solid foundation for future
-                    development.</p>
-                <h2 id="key-achievements">Key Achievements</h2>
-                <ol>
-                    <li>Created a simple but functional pixel sand simulation</li>
-                    <li>Established project goals and structure</li>
-                    <li>Implemented basic rule set for sand behavior as well as a few other matierials</li>
-                </ol>
-                <h2 id="technical-learnings">Technical Learnings</h2>
-                <ul>
-                    <li><strong>Conflict Resolution</strong>: Found the importance of managing conflicts between cells.
-                    </li>
-                    <li><strong>Rule-Based Systems</strong>: Gained insight on how the rulebased aspect of my program
-                        should function</li>
-                </ul>
-                <h2 id="challenges-encountered">Challenges Encountered</h2>
-                <ul>
-                    <li>Current implementation updates simulation cells one by one, causing imprecise logic, unexpected
-                        behaviors and artifacts.</li>
-                </ul>
-                <h2 id="next-steps">Next Steps</h2>
-                <ol>
-                    <li>
-                        <p><strong>User Interface Development</strong></p>
-                        <ul>
-                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
-                                    disabled=""> Design an intuitive UI for user interaction</li>
-                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
-                                    disabled=""> Implement basic controls (e.g., sand placement, clearing the
-                                simulation)</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <p><strong>Simulation Enhancement</strong></p>
-                        <ul>
-                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
-                                    disabled=""> Refine and expand the rule set for more realistic sand behavior</li>
-                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
-                                    disabled=""> Implement simultaneous cell updates to improve simulation accuracy</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <p><strong>Code Refactoring</strong></p>
-                        <ul>
-                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
-                                    disabled=""> Restructure the update mechanism for parallel processing of cells</li>
-                            <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox"
-                                    disabled=""> Optimize performance for larger-scale simulations</li>
-                        </ul>
-                    </li>
-                </ol>
-                <h2 id="reflections">Reflections</h2>
-                <p>This initial implementation has given me an idea of the scope of this project and potential places to
-                    improve, as well as problems i should expect to have in the future.</p>
-                <hr>
-            </div>
-        </div>
+    <div class="storyText">
+      <div>
+        <h1 class="text">Devlog: Sand Game Simulation - 2025 Feb 13</h1>
+        <h2 class="text">Project Overview</h2>
+        <p class="text">I’ve implemented a basic rule-based voxel sandsimulation. This has set the ground work for the full project.</p>
+        <h2 class="text">Key Achievements</h2>
+        <ol>
+          <li class="text">Created a simple but functional pixel sand simulation</li>
+          <li class="text">Established project goals and structure</li>
+          <li class="text">Implemented basic rule set for sand behavior as well as a few other matierials</li>
+        </ol>
+        <h2 class="text">Technical Learnings</h2>
+        <ul>
+          <li class="text"><strong>Conflict Resolution</strong>: Found the importance of managing conflicts between cells.</li>
+          <li class="text"><strong>Rule-Based Systems</strong>: Gained insight on how the rule based aspect of my program should function.</li>
+        </ul>
+        <h2 class="text">Challenges Encountered</h2>
+        <ul>
+          <li class="text">Current implementation updates simulation cells one by one,causing imprecise logic, unexpected behaviors and artifacts.</li>
+        </ul>
+        <h2 class="text">Next Steps</h2>
+        <ol>
+          <li class="text">
+            <p class="text"><strong>User Interface Development</strong></p>
+            <ul>
+              <li class="text"><input type="checkbox" disabled="" /> Design an intuitive UIfor user interaction</li>
+              <li class="text"><input type="checkbox" disabled="" /> Implement basic controls(e.g., sand placement, clearing the simulation)</li>
+            </ul>
+          </li>
+          <li class="text">
+            <p class="text"><strong>Simulation Enhancement</strong></p>
+            <ul>
+              <li class="text"><input type="checkbox" disabled="" /> Refine and expand therule set for more realistic sand behavior</li>
+              <li class="text"><input type="checkbox" disabled="" /> Implement simultaneouscell updates to improve simulation accuracy</li>
+            </ul>
+          </li>
+          <li class="text">
+            <p class="text"><strong>Code Refactoring</strong></p>
+            <ul>
+              <li class="text"><input type="checkbox" disabled="" /> Restructure the updatemechanism for parallel processing of cells</li>
+              <li class="text"><input type="checkbox" disabled="" /> Optimize performance forlarger-scale simulations</li>
+            </ul>
+          </li>
+        </ol>
+        <h2 class="text">Reflections</h2>
+        <p class="text">This initial implementation has given me an idea of the scope ofthis project and potential places to improve, as well as problems ishould expect to have in the future.</p>
+        <hr />
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
