--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta content="width=device-width,initial-scale=1" name="viewport" />
   <title>20% project blog</title>
   <style>
+    #project-link:visited{
+      color:#00DDDD;
+    }
     body {
       margin: 0;
       padding: 0;
