--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h2 class="text chapter">James Foltz</h2>
       <h2 class="text chapter">3rd times the charm</h2>
       <h2 class="text chapter">Google 20% Time Project</h2>
-      <p class="text">My project can be found at <a id="project-link" href="https://jamesfoltz.github.io/sand-sym/">jamesfoltz.github.io/sand-sym</a></p>
+      <p class="text">My project can be found at <a id="project-link" href="https://jamesfoltz.github.io/sand-sym/" target="_blank">jamesfoltz.github.io/sand-sym</a></p>
     </div>
     <div class="storyText">
       <div>
