--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       top: 0;
       width: 100%;
       margin-bottom: 15px;
-      box-shadow: #212121;
+      box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
     }
 
     .navbar a {
