--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </head>
 
 <body>
-  <div class="navbar"><a href="#home">Home</a><a href="#about">About</a><a href="#posts">Posts</a><a href="#contact">Contact</a></div>
+  <div class="navbar"><a href="#home" disabled>Home</a><a href="#about" disabled>About</a><a href="#posts" disabled>Posts</a><a href="#contact" disabled>Contact</a></div>
   <div class="main">
     <div class="storyText">
       <h2 class="text chapter">James Foltz</h2>
@@ -108,7 +108,7 @@
           <li>
             <p class="text"><strong>User Interface Development</strong></p>
             <ul>
-              <li class="text"><input type="checkbox" disabled="" /> Design an intuitive UIfor user interaction</li>
+              <li class="text"><input type="checkbox" disabled="" /> Design an intuitive UI for user interaction</li>
               <li class="text"><input type="checkbox" disabled="" /> Implement basic controls(e.g., sand placement, clearing the simulation)</li>
             </ul>
           </li>
