--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div>
         <h1 class="text">Devlog: Sand Game Simulation - 2025 Feb 13</h1>
         <h2 class="text">Project Overview</h2>
-        <p class="text">I’ve implemented a basic rule-based voxel sandsimulation. This has set the ground work for the full project.</p>
+        <p class="text">I’ve implemented a basic rule-based voxel sand simulation. This has set the ground work for the full project.</p>
         <h2 class="text">Key Achievements</h2>
         <ol>
           <li class="text">Created a simple but functional pixel sand simulation</li>
@@ -116,19 +116,19 @@
             <p class="text"><strong>Simulation Enhancement</strong></p>
             <ul>
               <li class="text"><input type="checkbox" disabled="" /> Refine and expand therule set for more realistic sand behavior</li>
-              <li class="text"><input type="checkbox" disabled="" /> Implement simultaneouscell updates to improve simulation accuracy</li>
+              <li class="text"><input type="checkbox" disabled="" /> Implement simultaneous cell updates to improve simulation accuracy</li>
             </ul>
           </li>
           <li>
             <p class="text"><strong>Code Refactoring</strong></p>
             <ul>
-              <li class="text"><input type="checkbox" disabled="" /> Restructure the updatemechanism for parallel processing of cells</li>
-              <li class="text"><input type="checkbox" disabled="" /> Optimize performance forlarger-scale simulations</li>
+              <li class="text"><input type="checkbox" disabled="" /> Restructure the update mechanism for parallel processing of cells</li>
+              <li class="text"><input type="checkbox" disabled="" /> Optimize performance for larger-scale simulations</li>
             </ul>
           </li>
         </ol>
         <h2 class="text">Reflections</h2>
-        <p class="text">This initial implementation has given me an idea of the scope ofthis project and potential places to improve, as well as problems ishould expect to have in the future.</p>
+        <p class="text">This initial implementation has given me an idea of the scope ofthis project and potential places to improve, as well as problems I should expect to have in the future.</p>
         <hr />
       </div>
     </div>
