--- a/index.html
+++ b/index.html
@@ -450,6 +450,18 @@
       <p>No significant progress was made. Minor bug fixes and cleaning up code. The code can now handle much more shapes.</p>
       <p>For my next project, I plan on making a basic new tab page with a computer terminal interface. the commands will do stuff from getting the weather to searching for different Pokemon and, of course, searching the internet. I am hoping to publish it as an extension on Google if it's not too difficult. The point of this it to get better at using API's.</p>
     </div>
+    <div class="storyText">
+      <h1>QISH(<mark>Q</mark>uick <mark>I</mark>nquiry <mark>SH</mark>ell)</h1>
+      <p>QISH is a pseudo-terminal used in place of a typical new tab page for web navigation. As the name sugests, it has many tools to make looking up information more efficient such as duckduckgo style bangs(!gi for google images, !wiki for wikipedia), Quick access to varios apis and a faster, more private search experience.</p>
+      <h3>Why though?</h3>
+      <p>Making this helped me practice the use of web apis as well as various libraries used in the profesional world.</p>
+      <h3>Tools used</h3>
+      <ul>
+        <li>JQuery, a DOM manipulation javascript library</li>
+        <li>terminal.jquery.js, an addon for JQuery to asist in making web pseudo-terminal aplications</li>
+        <li>keyboard.js, used to add more key interaction utility, allowing for more complex keyboard inputs</li>
+      </ul>
+    </div>
   </div>
 </body>
 
