added crt style to crt blog post

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       </code></pre>
       <p>This much data takes up a lot of space, meaning that it takes a while to scroll through the elements, and I wanted to fix that. rather than just hiding all the information until you click on the element, instead, at the top of the page there is an array of toggles to show or hide different pieces of information. This means if you only need the state of matter, you can make it only show the phase of the element.</p>
     </div>
-    <div class="storyText"><h1>Terminal asthetic with CSS</h1>
+    <div class="storyText crt"><h1>Terminal asthetic with CSS</h1>
       <p>I made a website that mimics the look of a retro computer terminal using CSS.</p>
       <h3>Why though?</h3>
       <p>It helped me learn about advanced CSS styling such as complexly aranging elements on the screen, animations, and advanced uses of text-shadows and box-shadows. One of my favorite pieces of styling was the screen flicker, chromatic aberation and fake sub-pixels, all used to emulate the look of old crt displays.</p>
